libtlafmt/src/renderer/snapshots/libtlafmt__renderer__comment__tests__comment_manually_unaligned.snap
---
source: libtlafmt/src/renderer/comment.rs
expression: output
---
-------------------------------- MODULE bananas --------------------------------
Op ==
    /\ bananas = 42 \* This is an important number.
    /\ platanos' = 42 \* That should be assigned here.
================================================================================
