libtlafmt/src/renderer/snapshots/libtlafmt__renderer__comment__tests__comment_non_adjacent_partially_aligned.snap
---
source: libtlafmt/src/renderer/comment.rs
expression: output
---
-------------------------------- MODULE bananas --------------------------------
Op ==
    /\ bananas = 42 \* This is an important number.
    /\ platanos' = 42 \* That should be assigned here.
    /\ platanos' = 42 \* That should be assigned here.
================================================================================
